bpo-46004: Fix error location for loops with invalid targets